--- a/pom.xml
+++ b/pom.xml
@@ -14,17 +14,32 @@
         <junit>4.13.2</junit>
         <mockito-all>1.10.19</mockito-all>
         <junit-jupiter>5.7.2</junit-jupiter>
+        <!-- DATABASE -->
+        <javax.persistence-api.version>2.2</javax.persistence-api.version>
+        <hibernate.version>5.4.14.Final</hibernate.version>
         <opencsv>5.3</opencsv>
         <mysql-connector-java>8.0.25</mysql-connector-java>
     </properties>
 
     <dependencies>
+        <!-- SERVLET -->
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
             <version>4.0.0</version>
             <scope>provided</scope>
         </dependency>
+
+        <!-- DATABASE -->
+        <dependency>
+            <groupId>javax.persistence</groupId>
+            <artifactId>javax.persistence-api</artifactId>
+            <version>${javax.persistence-api.version}</version>
+        </dependency><dependency>
+        <groupId>org.hibernate</groupId>
+        <artifactId>hibernate-core</artifactId>
+        <version>${hibernate.version}</version>
+    </dependency>
 
         <!-- JDBC -->
         <dependency>
@@ -64,6 +79,14 @@
             <artifactId>opencsv</artifactId>
             <version>${opencsv}</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.5.7.Final</version>
+        </dependency>
+
 
     </dependencies>
 
