--- a/pom.xml
+++ b/pom.xml
@@ -10,19 +10,28 @@
     <packaging>war</packaging>
 
     <properties>
+        <!-- SPRING -->
+        <org.spring.core>5.3.11</org.spring.core>
         <!-- TESTING  -->
         <junit>4.13.2</junit>
         <mockito-all>1.10.19</mockito-all>
         <junit-jupiter>5.7.2</junit-jupiter>
         <!-- DATABASE -->
+        <org.spring.data>2.5.5</org.spring.data>
         <h2-database>1.4.200</h2-database>
-        <javax.persistence-api.version>2.2</javax.persistence-api.version>
         <hibernate.version>5.4.14.Final</hibernate.version>
         <opencsv>5.3</opencsv>
         <mysql-connector-java>8.0.25</mysql-connector-java>
     </properties>
 
     <dependencies>
+        <!-- SPRING -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>${org.spring.core}</version>
+        </dependency>
+
         <!-- SERVLET -->
         <dependency>
             <groupId>javax.servlet</groupId>
@@ -33,14 +42,14 @@
 
         <!-- DATABASE -->
         <dependency>
-            <groupId>javax.persistence</groupId>
-            <artifactId>javax.persistence-api</artifactId>
-            <version>${javax.persistence-api.version}</version>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>${hibernate.version}</version>
         </dependency>
         <dependency>
-        <groupId>org.hibernate</groupId>
-        <artifactId>hibernate-core</artifactId>
-        <version>${hibernate.version}</version>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+            <version>${org.spring.data}</version>
         </dependency>
 
         <!-- JDBC -->
