--- a/pom.xml
+++ b/pom.xml
@@ -10,21 +10,32 @@
     <packaging>war</packaging>
 
     <properties>
+        <!-- LOGGER -->
+        <logback>1.2.6</logback>
         <!-- SPRING -->
         <org.spring.core>5.3.11</org.spring.core>
+        <!-- WEB -->
+        <servlet-api>4.0.0</servlet-api>
+        <org.spring.mvc>5.3.12</org.spring.mvc>
         <!-- TESTING  -->
-        <junit>4.13.2</junit>
-        <mockito-all>1.10.19</mockito-all>
+        <mockito-core>4.0.0</mockito-core>
         <junit-jupiter>5.7.2</junit-jupiter>
         <!-- DATABASE -->
         <org.spring.data>2.5.5</org.spring.data>
         <h2-database>1.4.200</h2-database>
         <hibernate.version>5.4.14.Final</hibernate.version>
-        <opencsv>5.3</opencsv>
         <mysql-connector-java>8.0.25</mysql-connector-java>
+        <!-- JSON -->
+        <jackson.core>2.13.0</jackson.core>
     </properties>
 
     <dependencies>
+        <!-- LOGGER -->
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>${logback}</version>
+        </dependency>
         <!-- SPRING -->
         <dependency>
             <groupId>org.springframework</groupId>
@@ -32,14 +43,19 @@
             <version>${org.spring.core}</version>
         </dependency>
 
-        <!-- SERVLET -->
+        <!-- WEB -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>${org.spring.mvc}</version>
+        </dependency>
+
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
-            <version>4.0.0</version>
+            <version>${servlet-api}</version>
             <scope>provided</scope>
         </dependency>
-
         <!-- DATABASE -->
         <dependency>
             <groupId>org.hibernate</groupId>
@@ -51,7 +67,6 @@
             <artifactId>spring-data-jpa</artifactId>
             <version>${org.spring.data}</version>
         </dependency>
-
         <!-- JDBC -->
         <dependency>
             <groupId>mysql</groupId>
@@ -63,19 +78,18 @@
             <artifactId>h2</artifactId>
             <version>${h2-database}</version>
         </dependency>
-
+        <!-- JSON -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.core}</version>
+        </dependency>
 
         <!-- TESTING  -->
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>${junit}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
             <groupId>org.mockito</groupId>
-            <artifactId>mockito-all</artifactId>
-            <version>${mockito-all}</version>
+            <artifactId>mockito-core</artifactId>
+            <version>${mockito-core}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -88,6 +102,12 @@
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
             <version>${junit-jupiter}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>${org.spring.core}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -114,6 +134,17 @@
                     <server>TomcatServer</server>
                     <path>/</path>
                 </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M5</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.junit.platform</groupId>
+                        <artifactId>junit-platform-surefire-provider</artifactId>
+                        <version>1.3.2</version>
+                    </dependency>
+                </dependencies>
             </plugin>
         </plugins>
     </build>
